add compatibility project

--- a/projects.html
+++ b/projects.html
@@ -61,9 +61,9 @@
     </div>
 
     <div class="project-card">
-      <img src="assets/images/calculator.png" alt="Calculator App" />
-      <h3>🧮 Simple Calculator</h3>
-      <p>A basic calculator app using Python with input validation and history logging.</p>
+      <img src="assets/images/compatibility.png" alt="Calculator App" />
+      <h3>Compatibility Checker Project</h3>
+      <p>This beginner-friendly project teaches you how to use Python's core operators — arithmetic, comparison, logical, and even string operations — by building a playful and interactive Compatibility Checker.</p>
       <a href="#">📂 View on GitHub</a>
     </div>
 
