description slot project

--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
     <div class="project-card">
       <img src="assets/images/slot.png" alt="Slot Machine Screenshot" />
       <h3>🎰 Slot Machine</h3>
-      <p>A Python terminal game using random numbers and user input.</p>
+      <p>In this fun mini-game, you'll build a text-based casino-style spinner using for and while loops — and learn how to repeat actions, use random outcomes, and manage simple game logic.</p>
       <a href="https://github.com/Pythonlyy/Casino-game-slot-C4Project" target="_blank">📂 View on GitHub</a>
     </div>
 
