--- a/projects.html
+++ b/projects.html
@@ -44,35 +44,41 @@
     <img src="assets/icons/project.png" alt="Projects Icon" />
     <h2>My Python Projects</h2>
   </div>
-  <div class="project-grid">
 
-    <div class="project-card" data-category="all">
+     
+    <div class="project-filters">
+  <button class="filter-btn active" data-category="all">All</button>
+  <button class="filter-btn" data-category="automation">Automation</button>
+  <button class="filter-btn" data-category="games">Games</button>
+  <button class="filter-btn" data-category="web">Web</button>
+  <button class="filter-btn" data-category="tools">Tools</button>
+  <button class="filter-btn" data-category="fun">Fun</button>
+</div>
+
+<div class="project-grid">
+
+    <div class="project-card" data-category="all games">
       <img src="assets/images/slot.png" alt="Slot Machine Screenshot" />
       <h3>🎰 Slot Machine</h3>
       <p>In this fun mini-game, you'll build a text-based casino-style spinner using for and while loops — and learn how to repeat actions, use random outcomes, and manage simple game logic.</p>
       <a href="https://github.com/Pythonlyy/Casino-game-slot-C4Project" target="_blank">📂 View on GitHub</a>
     </div>
 
-    <div class="project-card" data-category="all">
+    <div class="project-card" data-category="all tools">
       <img src="assets/images/profile.png" alt="Another Project" />
       <h3>Profile Generator</h3>
       <p>This beginner-friendly script teaches you the basics of Python by building a fun and simple Profile Generator.</p>
       <a href="https://github.com/Pythonlyy/-Python-Basics-Profile-Generator-C1-Project">📂 View on GitHub</a>
     </div>
 
-    <div class="project-card" data-category="all">
+    <div class="project-card" data-category="all fun">
       <img src="assets/images/compatibility.png" alt="Calculator App" />
       <h3>Compatibility Checker Project</h3>
       <p>This beginner-friendly project teaches you how to use Python's core operators — arithmetic, comparison, logical, and even string operations — by building a playful and interactive Compatibility Checker.</p>
       <a href="#">📂 View on GitHub</a>
     </div>
 
-    <div class="project-filters">
-  <button class="filter-btn active" data-category="all">All</button>
-  <button class="filter-btn" data-category="automation">Automation</button>
-  <button class="filter-btn" data-category="games">Games</button>
-  <button class="filter-btn" data-category="web">Web</button>
-</div>
+  
 
     <!-- Add more .project-card blocks here -->
     
