nav links corection

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 
   <nav class="nav">
   <div class="nav-container">
-    <div class="logo">
-  <a href="index.html">
-    <img src="assets/logo/logo.png" alt="Logo" class="logo-img" />
-  </a>
-</div>
+    <a href="index.html" class="logo">
+      <img src="assets/logo/logo.png" alt="Logo" class="logo-img" />
+    </a>
 
     <div class="hamburger" onclick="toggleMenu()">☰</div>
+
     <div class="nav-links" id="navLinks">
       <a href="index.html">
         <img src="assets/icons/home.png" alt="Home" class="nav-icon" />
@@ -27,14 +26,14 @@
         <img src="assets/icons/idea.png" alt="Projects" class="nav-icon" />
         Projects
       </a>
-        <a href="https://pythonly.hashnode.dev/">
-    <img src="assets/icons/blog.png" alt="Blog" class="nav-icon" />
-    Blog
-  </a>
-
+      <a href="https://your-blog.com" target="_blank">
+        <img src="assets/icons/blog.png" alt="Blog" class="nav-icon" />
+        Blog
+      </a>
     </div>
   </div>
 </nav>
+
 
 
 
