--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,8 @@
       <img src="assets/logo/logo.png" alt="Logo" class="logo-img" />
     </a>
 
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
+
     <div class="nav-links" id="navLinks">
       <a href="index.html">
         <img src="assets/icons/home.png" alt="Home" class="nav-icon" />
@@ -25,14 +27,11 @@
         <img src="assets/icons/idea.png" alt="Projects" class="nav-icon" />
         Projects
       </a>
-        <a href="https://pythonly.hashnode.dev/">
-    <img src="assets/icons/blog.png" alt="Blog" class="nav-icon" />
-    Blog
-  </a>
-
+      <a href="https://your-blog.com" target="_blank">
+        <img src="assets/icons/blog.png" alt="Blog" class="nav-icon" />
+        Blog
+      </a>
     </div>
-
-    <div class="hamburger" onclick="toggleMenu()">☰</div>
   </div>
 </nav>
 
