--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img src="assets/icons/idea.png" alt="Projects" class="nav-icon" />
         Projects
       </a>
-      <a href="https://your-blog.com" target="_blank">
+      <a href="https://pythonly.hashnode.dev/" target="_blank">
         <img src="assets/icons/blog.png" alt="Blog" class="nav-icon" />
         Blog
       </a>
