--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </a>
       <a href="https://pythonly.hashnode.dev/" target="_blank">
         <img src="assets/icons/blog.png" alt="Blog" class="nav-icon" />
-        Blog
+        Blogg
       </a>
     </div>
   </div>
