--- a/projects.html
+++ b/projects.html
@@ -69,21 +69,28 @@
       <img src="assets/images/slot.png" alt="Slot Machine Screenshot" />
       <h3>🎰 Slot Machine</h3>
       <p>In this fun mini-game, you'll build a text-based casino-style spinner using for and while loops — and learn how to repeat actions, use random outcomes, and manage simple game logic.</p>
-      <a href="https://github.com/Pythonlyy/Casino-game-slot-C4Project" target="_blank">📂 View on GitHub</a>
+      <a href="https://github.com/Pythonlyy/Casino-game-slot-C4Project" target="_blank">🧷 View on GitHub</a>
     </div>
 
     <div class="project-card" data-category="all tools">
       <img src="assets/images/profile.png" alt="Another Project" />
       <h3>Profile Generator</h3>
       <p>This beginner-friendly script teaches you the basics of Python by building a fun and simple Profile Generator.</p>
-      <a href="https://github.com/Pythonlyy/-Python-Basics-Profile-Generator-C1-Project">📂 View on GitHub</a>
+      <a href="https://github.com/Pythonlyy/-Python-Basics-Profile-Generator-C1-Project">🧷 View on GitHub</a>
     </div>
 
     <div class="project-card" data-category="all fun">
       <img src="assets/images/compatibility.png" alt="Calculator App" />
       <h3>Compatibility Checker Project</h3>
       <p>This beginner-friendly project teaches you how to use Python's core operators — arithmetic, comparison, logical, and even string operations — by building a playful and interactive Compatibility Checker.</p>
-      <a href="#">📂 View on GitHub</a>
+      <a href="#">🧷 View on GitHub</a>
+    </div>
+
+    <div class="project-card" data-category="all tool automation">
+      <img src="assets/images/compatibility.png" alt="Calculator App" />
+      <h3>File Organizer</h3>
+      <p>This Python automation tool helps users instantly organize messy folders (like their Downloads folder) by sorting files into categorized subfolders based on file type. It uses a simple graphical interface that allows anyone to select a folder — no technical knowledge required.</p>
+      <a href="https://ko-fi.com/s/6c24da5b2a">📂 Download For FREE</a>
     </div>
 
   
