add file organizer to tool category

--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
       <a href="#">🧷 View on GitHub</a>
     </div>
 
-    <div class="project-card" data-category="all tool automation">
+    <div class="project-card" data-category="all tools automation">
       <img src="assets/images/compatibility.png" alt="Calculator App" />
       <h3>File Organizer</h3>
       <p>This Python automation tool helps users instantly organize messy folders (like their Downloads folder) by sorting files into categorized subfolders based on file type. It uses a simple graphical interface that allows anyone to select a folder — no technical knowledge required.</p>
