--- a/projects.html
+++ b/projects.html
@@ -70,6 +70,7 @@
       <h3>🎰 Slot Machine</h3>
       <p>In this fun mini-game, you'll build a text-based casino-style spinner using for and while loops — and learn how to repeat actions, use random outcomes, and manage simple game logic.</p>
       <a href="https://github.com/Pythonlyy/Casino-game-slot-C4Project" target="_blank">🧷 View on GitHub</a>
+      <a href="https://replit.com/@Pythonly/SlotmachineDemo" target="_blank">🧷 Try it Yourself</a>
     </div>
 
     <div class="project-card" data-category="all tools">
