--- a/projects.html
+++ b/projects.html
@@ -90,7 +90,7 @@
       <img src="assets/images/compatibility.png" alt="Calculator App" />
       <h3>File Organizer</h3>
       <p>This Python automation tool helps users instantly organize messy folders (like their Downloads folder) by sorting files into categorized subfolders based on file type. It uses a simple graphical interface that allows anyone to select a folder — no technical knowledge required.</p>
-      <a href="https://github.com/Pythonlyy/File_Organizer/blob/main/README.md">📂 Download For FREE</a>
+      <a href="https://github.com/Pythonlyy/File_Organizer/blob/main/README.md">🧷 View on GitHub</a>
       <a href="https://ko-fi.com/s/6c24da5b2a">📂 Download For FREE</a>
     </div>
 
