--- a/projects.html
+++ b/projects.html
@@ -16,14 +16,23 @@
       <img src="assets/logo/logo.png" alt="Logo" class="logo-img" />
     </a>
 
+   
+
     <div class="hamburger" onclick="toggleMenu()">☰</div>
 
     <div class="nav-links" id="navLinks">
-      <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-<a href='https://ko-fi.com/M4M51GXHY6' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://storage.ko-fi.com/cdn/kofi3.png?v=6' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
-      <a href="index.html">
-        
-        <img src="assets/icons/home.png" alt="Home" class="nav-icon" />
+
+     <script>
+  kofiWidgetOverlay.draw('pythonly', {
+    'type': 'floating-chat',
+    'floating-chat.donateButton.text': '',
+    'floating-chat.donateButton.background-color': '#5cb85c',
+    'floating-chat.donateButton.text-color': '#fff'
+  });
+</script>
+      
+<a href="index.html">
+ <img src="assets/icons/home.png" alt="Home" class="nav-icon" />
         Home
       </a>
       <a href="projects.html">
