--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     <div class="hamburger" onclick="toggleMenu()">☰</div>
 
     <div class="nav-links" id="navLinks">
-
+<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
      <script>
   kofiWidgetOverlay.draw('pythonly', {
     'type': 'floating-chat',
