--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 
     <div class="nav-links" id="navLinks">
 <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
-     <script>
+<script>
   kofiWidgetOverlay.draw('pythonly', {
     'type': 'floating-chat',
     'floating-chat.donateButton.text': '',
@@ -86,7 +86,7 @@
       <img src="assets/images/compatibility.png" alt="Calculator App" />
       <h3>Compatibility Checker Project</h3>
       <p>This beginner-friendly project teaches you how to use Python's core operators — arithmetic, comparison, logical, and even string operations — by building a playful and interactive Compatibility Checker.</p>
-      <a href="#">🧷 View on GitHub</a>
+      <a href="https://github.com/Pythonlyy/compatibility_checker_C2">🧷 View on GitHub</a>
     </div>
 
     <div class="project-card" data-category="all tools automation">
@@ -95,6 +95,13 @@
       <p>This Python automation tool helps users instantly organize messy folders (like their Downloads folder) by sorting files into categorized subfolders based on file type. It uses a simple graphical interface that allows anyone to select a folder — no technical knowledge required.</p>
       <a href="https://github.com/Pythonlyy/File_Organizer/blob/main/README.md">🧷 View on GitHub</a>
       <a href="https://ko-fi.com/s/6c24da5b2a">📂 Download For FREE</a>
+    </div>
+
+    <div class="project-card" data-category="all fun">
+      <img src="assets/images/compatibility.png" alt="Calculator App" />
+      <h3>Age Access Checker</h3>
+      <p>In this beginner-friendly Python project, you'll learn how to make decisions in your code using if, elif, and else statements — plus how Boolean logic and indentation matter in real-world programming.</p>
+      <a href="https://github.com/Pythonlyy/Age_Access_Checker_C3_project">🧷 View on GitHub</a>
     </div>
 
   
