--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
     </div>
 
     <div class="project-card" data-category="all fun">
-      <img src="assets/images/compatibility.png" alt="Calculator App" />
+      <img src="assets/images/age Checker.png" alt="Calculator App" />
       <h3>Age Access Checker</h3>
       <p>In this beginner-friendly Python project, you'll learn how to make decisions in your code using if, elif, and else statements — plus how Boolean logic and indentation matter in real-world programming.</p>
       <a href="https://github.com/Pythonlyy/Age_Access_Checker_C3_project">🧷 View on GitHub</a>
