--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
       <a href="https://github.com/Pythonlyy/Casino-game-slot-C4Project" target="_blank">🧷 View on GitHub</a>
     </div>
 
-    <div class="project-card" data-category="all tools">
+    <div class="project-card" data-category="all fun">
       <img src="assets/images/profile.png" alt="Another Project" />
       <h3>Profile Generator</h3>
       <p>This beginner-friendly script teaches you the basics of Python by building a fun and simple Profile Generator.</p>
