add course nav link

--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
   });
 </script>
 
+
       <a href="index.html">
         <img src="assets/icons/home.png" alt="Home" class="nav-icon" />
         Home
+      </a>
+      <a href="https://bit.ly/PythonCoursess">
+        <img src="assets/icons/courses.png" alt="Home" class="nav-icon" />
+        My Top Course Picks
       </a>
       <a href="projects.html">
         <img src="assets/icons/idea.png" alt="Projects" class="nav-icon" />
