--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,10 @@
  <img src="assets/icons/home.png" alt="Home" class="nav-icon" />
         Home
       </a>
+      <a href="https://bit.ly/PythonCoursess">
+        <img src="assets/icons/courses.png" alt="Home" class="nav-icon" />
+        My Top Course Picks
+      </a>
       <a href="projects.html">
         <img src="assets/icons/idea.png" alt="Projects" class="nav-icon" />
         Projects
