--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
       </a>
       <a href="https://bit.ly/PythonCoursess">
         <img src="assets/icons/courses.png" alt="Home" class="nav-icon" />
-        My Top Course Picks
+        My Top Courses Picks
       </a>
       <a href="projects.html">
         <img src="assets/icons/idea.png" alt="Projects" class="nav-icon" />
