--- a/projects.html
+++ b/projects.html
@@ -37,13 +37,13 @@
       </a>
       <a href="https://bit.ly/PythonCoursess">
         <img src="assets/icons/courses.png" alt="Home" class="nav-icon" />
-        My Top Courses Picks
+        My Top Course Picks
       </a>
       <a href="projects.html">
         <img src="assets/icons/idea.png" alt="Projects" class="nav-icon" />
         Projects
       </a>
-      <a href="https://your-blog.com" target="_blank">
+      <a href="https://pythonly.hashnode.dev/" target="_blank">
         <img src="assets/icons/blog.png" alt="Blog" class="nav-icon" />
         Blog
       </a>
