--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     <div class="hamburger" onclick="toggleMenu()">☰</div>
 
+
     <div class="nav-links" id="navLinks">
       <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 <script>
@@ -49,6 +50,12 @@
   </div>
 </nav>
 
+<section class="video-banner">
+  <video id="introVideo" autoplay muted playsinline>
+  <source src="assets/video/bannerr.mp4" type="video/mp4" />
+</video>
+</section>
+
 
 
 
@@ -56,19 +63,8 @@
 
 
   <!-- Hero Section -->
-  <section class="hero">
-    <h1>Hello, I'm Eugene</h1>
-    <p>Passionate Python Developer focused on building impactful projects and inspiring others through content. </p>
-  </section>
-  <section class="about">
-  <h2>About Me</h2>
-  <p>
-    Hi, I’m Eugene  , a Python developer who loves turning ideas into code.<br><br>
-    Whether it’s building tools to automate tasks, web apps with Flask, or small games with Pygame — I enjoy writing clean and efficient code.<br><br>
-    Currently exploring APIs, AI, and creative automation with Python.
-  </p>
-</section>
 
+  
   <script src="script.js"></script>
 </body>
 </html>
