--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <section class="video-banner">
   <video id="introVideo" autoplay muted playsinline>
-  <source src="assets/video/bannerr.mp4" type="video/mp4" />
+  <source src="assets/video/banerr.mp4" type="video/mp4" />
 </video>
 </section>
 
