--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
   <source src="assets/video/banerr.mp4" type="video/mp4" />
 </video>
 </section>
-
+<section class="banner-mobile">
+<video id="introVideo" autoplay muted playsinline>
+  <source src="assets/video/banner-mobile.mp4" type="video/mp4" />
+</video>
+</section>
 
 
 
