--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
 
 <section class="video-banner">
   <video id="introVideoDesktop" autoplay muted playsinline>
-  <source src="assets/video/banerr.mp4" type="video/mp4" />
-</video>
-</section>
-<section class="banner-mobile">
-<video id="introVideoMobile" autoplay muted playsinline>
-  <source src="assets/video/banner-mobile.mp4" type="video/mp4" />
-</video>
+    <source src="assets/video/banerr.mp4" type="video/mp4" />
+  </video>
 </section>
 
+<!-- Mobile video -->
+<section class="banner-mobile">
+  <video id="introVideoMobile" autoplay muted playsinline>
+    <source src="assets/video/banner-mobile.mp4" type="video/mp4" />
+  </video>
+</section>
 
 
   <!-- Hero + About sections remain here -->
